--- a/styles/editor.css
+++ b/styles/editor.css
@@ -2,3 +2,15 @@ body
 {
     background-color: #090e11;
 }
+#MainSection .MainSecChild_IMGDIV
+{
+    position:absolute;
+    width: 500px;
+    height: 500px;
+    background-color: rgb(7, 0, 75);
+}
+#MainSection
+{
+    width: 1000px;
+    height: 1000px;
+}
