--- a/styles/editor.css
+++ b/styles/editor.css
@@ -4,13 +4,33 @@ body
 }
 #MainSection .MainSecChild_IMGDIV
 {
+    transition: .5s ease;
     position:absolute;
-    width: 500px;
-    height: 500px;
-    background-color: rgb(7, 0, 75);
+    width: 30%;
+    height: 50%;
+    background-color: rgb(0, 207, 111);
+    resize: both;
+    overflow: hidden;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+}
+#MainSection .MainSecChild_IMGDIV div
+{
+    width: 100%;
+    height: 95%;
+    position: absolute;
+    top: 5%;
+    overflow-y: scroll; 
+}
+
+#MainSection .MainSecChild_IMGDIV div img
+{
+    width: 100%;
 }
 #MainSection
 {
-    width: 1000px;
-    height: 1000px;
+    position: absolute;
+    width: 95%;
+    height: 90%;
+    overflow: scroll;
 }
