--- a/styles/editor.css
+++ b/styles/editor.css
@@ -4,7 +4,7 @@ body
 }
 #MainSection .MainSecChild_IMGDIV
 {
-    transition: .5s ease;
+    transition: top .5s , left .5s;
     position:absolute;
     width: 30%;
     height: 50%;
@@ -26,6 +26,7 @@ body
 #MainSection .MainSecChild_IMGDIV div img
 {
     width: 100%;
+    height: 100%;
 }
 #MainSection .MainSecChild_VIDDIV
 {
